# slothsh-toolkit

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: Functions.cmake  Versions.cmake  slothshtoolkitConfig.cmake.in
include/: slsh.hpp
include/slsh/: errors.hpp  functional.hpp  traits.hpp  utility.hpp
